[gd_scene load_steps=14 format=2]

[ext_resource path="res://ui/monogram-extra-small.tres" type="DynamicFont" id=2]
[ext_resource path="res://tutorial/tutorial_steps.gd" type="Script" id=3]
[ext_resource path="res://manual/manual.png" type="Texture" id=4]
[ext_resource path="res://lights/lights.png" type="Texture" id=5]
[ext_resource path="res://lever/lever.png" type="Texture" id=6]
[ext_resource path="res://ui/monogram-small.tres" type="DynamicFont" id=7]
[ext_resource path="res://ui/monogram-medium.tres" type="DynamicFont" id=8]
[ext_resource path="res://tutorial/example_manual.png" type="Texture" id=9]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="TutorialUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.23597
margin_top = 0.235977
margin_right = 0.235962
margin_bottom = 0.235977
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" type="Sprite" parent="."]
position = Vector2( 119.631, 67.673 )
texture = ExtResource( 4 )

[node name="step1" type="Panel" parent="Tutorial"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -120.0
margin_top = -67.5
margin_right = -120.0
margin_bottom = -67.5
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subtitle" type="Label" parent="Tutorial/step1"]
anchor_left = 0.566
anchor_top = 0.082
anchor_right = 0.929
anchor_bottom = 0.148
margin_left = 0.159988
margin_top = -0.0700006
margin_right = 0.0399933
margin_bottom = 0.0200005
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.180392, 0.133333, 0.184314, 1 )
text = "1 / 3"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextLeft" type="Label" parent="Tutorial/step1"]
anchor_left = 0.106
anchor_top = 0.172
anchor_right = 0.411
anchor_bottom = 0.845
margin_left = -0.440002
margin_top = -0.220001
margin_right = 1.36
margin_bottom = -0.0750046
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.180392, 0.133333, 0.184314, 1 )
text = "Welcome intern,

We expect our interns to perform daily tasks to maintain our nuclear reactor. 

Our 1962 reactor is a delicate piece of machinery, so don't screw up. 

Use the manual to find the lever order based on the reactor's light indicators.
"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextRight" type="Label" parent="Tutorial/step1"]
anchor_left = 0.587
anchor_top = 0.305
anchor_right = 0.9
anchor_bottom = 0.845
margin_left = 0.119995
margin_top = -1.175
margin_right = -1.52588e-05
margin_bottom = -0.0750046
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.180392, 0.133333, 0.184314, 1 )
text = "The reactor has  3 indicators that together display a sequence. IMPORTANT: Remember the indicator color and state.

here are 3 different colors (red, blue and green) and 3  different states (OFF, ON, BLINKING)."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleRight" type="Label" parent="Tutorial/step1"]
anchor_left = 0.596
anchor_top = 0.133
anchor_right = 0.9
anchor_bottom = 0.296
margin_left = -2.04001
margin_top = 0.0450001
margin_right = -1.52588e-05
margin_bottom = 0.0400009
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.180392, 0.133333, 0.184314, 1 )
text = "1. Sequence"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Tutorial/step1"]
position = Vector2( 145.133, 106.767 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
hframes = 7
frame = 2

[node name="Sprite2" type="Sprite" parent="Tutorial/step1"]
position = Vector2( 164.048, 106.767 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
hframes = 7
frame = 4

[node name="Sprite3" type="Sprite" parent="Tutorial/step1"]
position = Vector2( 182.609, 106.591 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
hframes = 7
frame = 6

[node name="Escape" type="Button" parent="Tutorial/step1"]
anchor_left = 0.575
anchor_top = 0.838
anchor_right = 0.946
anchor_bottom = 0.934
margin_top = -0.00500488
margin_bottom = 0.034996
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.180392, 0.133333, 0.184314, 1 )
custom_colors/font_color_hover = Color( 0.941176, 0.309804, 0.470588, 1 )
custom_colors/font_color_pressed = Color( 0.941176, 0.309804, 0.470588, 1 )
text = "enter/space to continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="step2" type="Panel" parent="Tutorial"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -120.0
margin_top = -67.5
margin_right = -120.0
margin_bottom = -67.5
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subtitle" type="Label" parent="Tutorial/step2"]
anchor_left = 0.566
anchor_top = 0.082
anchor_right = 0.929
anchor_bottom = 0.148
margin_left = 0.159988
margin_top = -0.0700006
margin_right = 0.0399933
margin_bottom = 0.0200005
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.180392, 0.133333, 0.184314, 1 )
text = "2 / 3"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextRight" type="Label" parent="Tutorial/step2"]
anchor_left = 0.587
anchor_top = 0.305
anchor_right = 0.9
anchor_bottom = 0.845
margin_left = 0.119995
margin_top = -1.175
margin_right = -1.52588e-05
margin_bottom = -0.0750046
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.180392, 0.133333, 0.184314, 1 )
text = "The levers have to be pulled to the correct character while matching the sequence.

IMPORTANT: Be sure to set the lever to neutral in order to register the character for the sequence."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleRight" type="Label" parent="Tutorial/step2"]
anchor_left = 0.596
anchor_top = 0.133
anchor_right = 0.9
anchor_bottom = 0.296
margin_left = -2.2168
margin_top = 0.0450001
margin_right = -0.176804
margin_bottom = 0.0400009
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.180392, 0.133333, 0.184314, 1 )
text = "3. Levers"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextLeft" type="Label" parent="Tutorial/step2"]
anchor_left = 0.587
anchor_top = 0.305
anchor_right = 0.9
anchor_bottom = 0.845
margin_left = -116.376
margin_top = -1.175
margin_right = -116.496
margin_bottom = -0.0750046
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.180392, 0.133333, 0.184314, 1 )
text = "The manual in the reactor room helps you find out the lever necessary to stabilize the reactor. Important: this is our last copy

Cross-reference the color and the state of the indicators and remember the corresponding characters."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLeft" type="Label" parent="Tutorial/step2"]
anchor_left = 0.596
anchor_top = 0.133
anchor_right = 0.9
anchor_bottom = 0.296
margin_left = -118.713
margin_top = 0.0450001
margin_right = -116.673
margin_bottom = 0.0400009
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.180392, 0.133333, 0.184314, 1 )
text = "2. Manual"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Tutorial/step2"]
position = Vector2( 79.023, 104.857 )
scale = Vector2( 0.0755865, 0.0755865 )
texture = ExtResource( 9 )

[node name="Sprite2" type="Sprite" parent="Tutorial/step2"]
position = Vector2( 180.349, 100.072 )
texture = ExtResource( 6 )
hframes = 28
frame = 4

[node name="Escape" type="Button" parent="Tutorial/step2"]
anchor_left = 0.575
anchor_top = 0.838
anchor_right = 0.946
anchor_bottom = 0.934
margin_left = 0.133026
margin_top = 0.461029
margin_right = 0.133026
margin_bottom = 0.50103
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.180392, 0.133333, 0.184314, 1 )
custom_colors/font_color_hover = Color( 0.941176, 0.309804, 0.470588, 1 )
custom_colors/font_color_pressed = Color( 0.941176, 0.309804, 0.470588, 1 )
text = "enter/space to continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="step3" type="Panel" parent="Tutorial"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -120.0
margin_top = -67.5
margin_right = -120.0
margin_bottom = -67.5
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subtitle" type="Label" parent="Tutorial/step3"]
anchor_left = 0.566
anchor_top = 0.082
anchor_right = 0.929
anchor_bottom = 0.148
margin_left = 0.159988
margin_top = -0.0700006
margin_right = 0.0399933
margin_bottom = 0.0200005
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.180392, 0.133333, 0.184314, 1 )
text = "3 / 3"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextRight" type="Label" parent="Tutorial/step3"]
anchor_left = 0.587
anchor_top = 0.305
anchor_right = 0.9
anchor_bottom = 0.845
margin_left = 0.253021
margin_top = -1.58397
margin_right = 0.133011
margin_bottom = -0.483978
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.180392, 0.133333, 0.184314, 1 )
text = "If you do manage to fail the sequences (or fall asleep during the work day), the nuclear plant will enter a meltdown-protocol.

This protocol erases all evidence showing interns handled these tasks. You will also definetely not survive this incident."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleRight" type="Label" parent="Tutorial/step3"]
anchor_left = 0.596
anchor_top = 0.133
anchor_right = 0.9
anchor_bottom = 0.296
margin_left = -2.2168
margin_top = 0.0450001
margin_right = -0.176804
margin_bottom = 0.0400009
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.180392, 0.133333, 0.184314, 1 )
text = "5. MELTDOWN!"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextLeft" type="Label" parent="Tutorial/step3"]
anchor_left = 0.587
anchor_top = 0.305
anchor_right = 0.9
anchor_bottom = 0.845
margin_left = -116.376
margin_top = -1.175
margin_right = -116.496
margin_bottom = -0.0750046
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.180392, 0.133333, 0.184314, 1 )
text = "Prevent a meltdown at all cost!

1. Do not make mistakes, this will destabilize the reactor, resulting in a meltdown.
2. Do not linger around, the reactor needs regular  stabilization."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLeft" type="Label" parent="Tutorial/step3"]
anchor_left = 0.596
anchor_top = 0.133
anchor_right = 0.9
anchor_bottom = 0.296
margin_left = -118.713
margin_top = 0.0450001
margin_right = -116.673
margin_bottom = 0.0400009
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.180392, 0.133333, 0.184314, 1 )
text = "4. Meltdown"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Escape" type="Button" parent="Tutorial/step3"]
anchor_left = 0.575
anchor_top = 0.838
anchor_right = 0.946
anchor_bottom = 0.934
margin_left = -1.52588e-05
margin_top = -0.130005
margin_right = -0.0400085
margin_bottom = -0.090004
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.180392, 0.133333, 0.184314, 1 )
custom_colors/font_color_hover = Color( 0.941176, 0.309804, 0.470588, 1 )
custom_colors/font_color_pressed = Color( 0.941176, 0.309804, 0.470588, 1 )
text = "enter/space to start"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Tutorial/step1/Escape" to="." method="_on_Escape_pressed"]
[connection signal="pressed" from="Tutorial/step2/Escape" to="." method="_on_Escape_pressed"]
[connection signal="pressed" from="Tutorial/step3/Escape" to="." method="_on_Escape_pressed"]
